--- a/renovate.json
+++ b/renovate.json
@@ -1,20 +1,4 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["gitlab>smartive/internal-it/renovate"],
-  "packageRules": [
-    {
-      "packagePatterns": ["^@types[/]"],
-      "groupName": "Typescript typings"
-    },
-    {
-      "packagePatterns": ["^eslint*", "prettier"],
-      "groupName": "Linting"
-    },
-    {
-      "updateTypes": ["major"],
-      "automerge": false,
-      "gitLabAutomerge": false,
-      "labels": ["dependencies-major"]
-    }
-  ]
+  "extends": ["local>smartive/renovate-config"]
 }
