--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,10 +1,10 @@
 {
-  "branches": ["master"],
+  "branches": ["main"],
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
     "@semantic-release/npm",
-    "@semantic-release/gitlab"
+    "@semantic-release/github"
   ]
 }
