--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,5 +20,6 @@ jobs:
         with:
           node-version: 24
       - run: npm ci
+      - run: npm run prettier
       - run: npm run lint
       - run: npm run build
