--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "lint": "prettier --check src && eslint src",
+    "lint": "eslint src",
+    "prettier": "prettier --check src",
     "publish": "semantic-release"
   },
   "publishConfig": {
@@ -19,15 +20,16 @@
   "author": "smartive AG",
   "license": "MIT",
   "devDependencies": {
-    "@semantic-release/changelog": "6.0.3",
-    "@semantic-release/commit-analyzer": "13.0.1",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^13.0.1",
     "@semantic-release/gitlab": "^13.2.1",
-    "@semantic-release/npm": "13.1.1",
-    "@semantic-release/release-notes-generator": "14.1.0",
+    "@semantic-release/npm": "^13.1.1",
+    "@semantic-release/release-notes-generator": "^14.1.0",
     "@smartive/eslint-config": "^7.0.0",
     "@smartive/prettier-config": "^3.1.2",
     "@types/node": "^24.0.0",
-    "eslint": "^9.16.0",
+    "eslint": "^9.39.1",
+    "eslint-import-resolver-typescript": "^4.4.4",
     "prettier": "^3.3.3",
     "semantic-release": "^25.0.0",
     "typescript": "^5.6.2"
