--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,9 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["local>smartive/renovate-config"]
+  "extends": [
+    "local>smartive/renovate-config",
+    ":automergeRequireAllStatusChecks",
+    ":automergeDisabled",
+    ":automergeStableNonMajor"
+  ]
 }
