fix(renovate): pin dev dependencies

--- a/renovate.json
+++ b/renovate.json
@@ -4,6 +4,7 @@
     "local>smartive/renovate-config",
     ":automergeRequireAllStatusChecks",
     ":automergeDisabled",
-    ":automergeStableNonMajor"
+    ":automergeStableNonMajor",
+    ":pinOnlyDevDependencies"
   ]
 }
