chore(renovate): switch to default renovate presets

--- a/renovate.json
+++ b/renovate.json
@@ -1,10 +1,9 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "local>smartive/renovate-config",
+    "config:js-lib",
     ":automergeRequireAllStatusChecks",
     ":automergeDisabled",
-    ":automergeStableNonMajor",
-    ":pinOnlyDevDependencies"
+    ":automergeStableNonMajor"
   ]
 }
