--- a/package.json
+++ b/package.json
@@ -26,14 +26,14 @@
     "eslint-import-resolver-typescript": "4.4.4",
     "prettier": "3.8.1",
     "typescript": "5.9.3",
-    "ioredis": "^5.4.1"
+    "ioredis": "5.4.1"
   },
   "dependencies": {
     "@vercel/postgres": "^0.10.0",
     "graphql": "^16.9.0"
   },
   "peerDependencies": {
-    "ioredis": "^5.4.1"
+    "ioredis": "^5.4.0"
   },
   "peerDependenciesMeta": {
     "ioredis": {
