fix: fix less shit 💩

--- a/package.json
+++ b/package.json
@@ -6,18 +6,22 @@
   "source": "./src/index.ts",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "files": [
+    "dist/**/*",
+    "src/**/*"
+  ],
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.js"
+      "default": "./dist/index.js"
     },
     "./redis": {
       "types": "./dist/cache-tags-redis.d.ts",
-      "import": "./dist/cache-tags-redis.js"
+      "default": "./dist/cache-tags-redis.js"
     },
     "./postgres": {
       "types": "./dist/cache-tags.d.ts",
-      "import": "./dist/cache-tags.js"
+      "default": "./dist/cache-tags.js"
     }
   },
   "scripts": {
