chore: also install conventional-changelog-conventionalcommits

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,5 +30,6 @@ jobs:
           semantic_version: 25
           extra_plugins: |
             @semantic-release/changelog@6
+            conventional-changelog-conventionalcommits@9
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
