--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,11 +7,11 @@
     "strict": true,
     "noImplicitReturns": true,
     "noImplicitAny": true,
-    "moduleResolution": "node",
+    "moduleResolution": "nodenext",
     "allowSyntheticDefaultImports": true,
     "allowJs": true,
     "resolveJsonModule": true,
-    "module": "esnext",
+    "module": "nodenext",
     "target": "esnext"
   },
   "include": ["./src/**/*"]
