--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
       "types": "./dist/cache/provider/redis.d.ts",
       "import": "./dist/cache/provider/redis.js"
     },
-    "./cache/postgres": {
-      "types": "./dist/cache/provider/postgres.d.ts",
-      "import": "./dist/cache/provider/postgres.js"
+    "./cache/neon": {
+      "types": "./dist/cache/provider/neon.d.ts",
+      "import": "./dist/cache/provider/neon.js"
     }
   },
   "files": [
@@ -46,10 +46,10 @@
     "type": "git"
   },
   "devDependencies": {
+    "@neondatabase/serverless": "1.0.2",
     "@smartive/eslint-config": "7.0.1",
     "@smartive/prettier-config": "3.1.2",
     "@types/node": "24.10.12",
-    "@vercel/postgres": "0.10.0",
     "eslint": "9.39.2",
     "eslint-import-resolver-typescript": "4.4.4",
     "graphql": "16.12.0",
@@ -59,12 +59,12 @@
     "typescript": "5.9.3"
   },
   "peerDependencies": {
-    "@vercel/postgres": "^0.10.0",
+    "@neondatabase/serverless": "^1.0.0",
     "graphql": "^15.0.0 || ^16.0.0",
     "ioredis": "^5.4.0"
   },
   "peerDependenciesMeta": {
-    "@vercel/postgres": {
+    "@neondatabase/serverless": {
       "optional": true
     },
     "graphql": {
